--- a/skifflog/templates/base.html
+++ b/skifflog/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+{% load static %}
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
@@ -13,9 +13,9 @@
     <title>Welcome to Foundation</title>
 
     <!-- Included CSS Files -->
-    <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="{% static 'stylesheets/app.css' %}">
 
-    <script src="javascripts/foundation/modernizr.foundation.js"></script>
+    <script src="{% static 'javascripts/foundation/modernizr.foundation.js' %}"></script>
 
 </head>
 <body>
@@ -114,46 +114,9 @@
     </div>
 
     <!-- Included JS Files (Uncompressed) -->
-    <script src="javascripts/foundation/jquery.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.magellan.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.navigation.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.orbit.js"></script>
-    
-    <script src="javascripts/foundation/jquery.event.swipe.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.reveal.js"></script>
-    
-    <script src="javascripts/foundation/jquery.event.move.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.tabs.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.forms.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.mediaQueryToggle.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.clearing.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.accordion.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.buttons.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.topbar.js"></script>
-    
-    <script src="javascripts/foundation/jquery.placeholder.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.tooltips.js"></script>
-    
-    <script src="javascripts/foundation/jquery.cookie.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.alerts.js"></script>
-    
-    <script src="javascripts/foundation/jquery.foundation.joyride.js"></script>
-    
+    <script src="{% static 'javascripts/jquery.js' %}"></script>
+    <script data-main="{% static 'javascripts/main.js' %}"
+        src="{% static 'javascripts/require.js' %}"></script>
 
-  <!-- Application Javascript, safe to override -->
-  <script src="javascripts/foundation/app.js"></script>
 </body>
 </html>
