--- a/skifflog/static/stylesheets/app.css
+++ b/skifflog/static/stylesheets/app.css
@@ -2719,7 +2719,7 @@ div.orbit-wrapper span.rotator {
   position: absolute;
   top: 0;
   left: -20px;
-  background: url('/images/foundation/orbit/rotator-black.png?1352375336') no-repeat;
+  background: url('../images/foundation/orbit/rotator-black.png?1352375336') no-repeat;
   z-index: 3;
 }
 /* line 27, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
@@ -2741,7 +2741,7 @@ div.orbit-wrapper span.mask {
 div.orbit-wrapper span.mask.move {
   width: 40px;
   left: 0;
-  background: url('/images/foundation/orbit/timer-black.png?1352375336') repeat 0 0;
+  background: url('../images/foundation/orbit/timer-black.png?1352375336') repeat 0 0;
 }
 /* line 32, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 div.orbit-wrapper span.pause {
@@ -2751,13 +2751,13 @@ div.orbit-wrapper span.pause {
   position: absolute;
   top: 0;
   left: 0;
-  background: url('/images/foundation/orbit/pause-black.png?1352375336') no-repeat;
+  background: url('../images/foundation/orbit/pause-black.png?1352375336') no-repeat;
   z-index: 4;
   opacity: 0;
 }
 /* line 33, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 div.orbit-wrapper span.pause.active {
-  background: url('/images/foundation/orbit/pause-black.png?1352375336') no-repeat 0 -40px;
+  background: url('../images/foundation/orbit/pause-black.png?1352375336') no-repeat 0 -40px;
 }
 /* line 35, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 div.orbit-wrapper div.timer:hover span.pause, div.orbit-wrapper span.pause.active {
@@ -2804,24 +2804,24 @@ div.orbit-wrapper div.slider-nav span {
 }
 /* line 48, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 div.orbit-wrapper div.slider-nav span.right {
-  background: url('/images/foundation/orbit/right-arrow.png?1352375336');
+  background: url('../images/foundation/orbit/right-arrow.png?1352375336');
   background-size: 100%;
   right: 0;
 }
 /* line 49, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 div.orbit-wrapper div.slider-nav span.left {
-  background: url('/images/foundation/orbit/left-arrow.png?1352375336');
+  background: url('../images/foundation/orbit/left-arrow.png?1352375336');
   background-size: 100%;
   left: 0;
 }
 
 /* line 54, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 .lt-ie9 div.orbit-wrapper div.slider-nav span.right {
-  background: url('/images/foundation/orbit/right-arrow-small.png?1352375336');
+  background: url('../images/foundation/orbit/right-arrow-small.png?1352375336');
 }
 /* line 55, ../../../../../../.gem/ruby/1.9.1/gems/zurb-foundation-3.2.0/scss/foundation/components/modules/_orbit.scss */
 .lt-ie9 div.orbit-wrapper div.slider-nav span.left {
-  background: url('/images/foundation/orbit/left-arrow-small.png?1352375336');
+  background: url('../images/foundation/orbit/left-arrow-small.png?1352375336');
 }
 
 /* Bullet Nav ---------------------- */
@@ -2842,7 +2842,7 @@ ul.orbit-bullets li {
   cursor: pointer;
   color: #999999;
   text-indent: -9999px;
-  background: url('/images/foundation/orbit/bullets.jpg?1352375336') no-repeat 4px 0;
+  background: url('../images/foundation/orbit/bullets.jpg?1352375336') no-repeat 4px 0;
   width: 13px;
   height: 12px;
   overflow: hidden;
