--- a/skifflog/templates/home.html
+++ b/skifflog/templates/home.html
@@ -1,1 +1,16 @@
 {% extends 'base.html' %}
+{% block content %}
+
+    <div class="row">
+        <div class="twelve columns">
+            <h1>Keeping track of time is annoying.</h1>
+            <p>And time flies when you're having fun at The Skiff!</p>
+            <p>So I've built a time logging system that allows you to select
+                your plan, and will warn you when you are nearing going
+                over your allotted time.</p>
+            <p>You can choose how to split your days up (twelve hours, six hours)
+                and have your time rounded up to this depending on how you feel
+                hours should be allotted.</p>
+        </div>
+    </div>
+{% endblock %}
