--- a/skifflog/templates/base.html
+++ b/skifflog/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+{% load socialaccount %}
+{% load account %}
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
@@ -21,61 +22,39 @@
 <body>
     <nav class="top-bar">
       <ul>
-        <li class="name"><h1><a href="#">skifflog</a></h1></li>
+        <li class="name"><h1><a href="/">skifflog</a></h1></li>
         <li class="toggle-topbar"><a href="#"></a></li>
       </ul>
       <section>
-        <ul class="left">
-          <li><a href="#">Link</a></li>
 
-          <li class="has-dropdown">
-            <a href="#">Link</a>
-
-            <ul class="dropdown">
-              <li><a href="#">Dropdown Link</a></li>
-            </ul>
-
-          </li>
-
-        </ul>
 
         <ul class="right">
-
-          <li class="active"><a href="#">Link</a></li>
           <li class="divider"></li>
 
-
-          <li class="has-button">
-            <a class="small button" href="#">Button!</a>
-          </li>
+          {% if user.is_active %}
+            <li>
+              <a href="{% url dashboard %}">Logged in as {{ user.username }}</a>
+            </li>
+            <li class="has-button ">
+                <a class="small button" href="{% url account_logout %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="has-button">
+              <a class="small button" href="{% provider_login_url 'persona' %}">Login</a>
+            </li>
+          {% endif %}
         </ul>
       </section>
     </nav>
-
     <div class="row">
-        <div class="twelve columns">
-            <h1>Hello.</h1>
-            <p>I find it confusing to track the time I spend at The Skiff and
-                also have space in my head for projects.</p>
-            <p>So I've built a time logging system that allows you to select
-                your plan, and will warn you when you are nearing going
-                over your allotted time.</p>
-            <p>You can choose how to split your days up (twelve hours, six hours)
-                and have your time rounded up to this depending on how you feel
-                hours should be allotted.</p>
-            <a href="#" class="button" data-reveal-id="myModal">Click Me For A Modal</a>
-        </div>
+      <div class="twelve columns">
+      {% block content %}{% endblock %}
+      </div>
     </div>
-    <div id="myModal" class="reveal-modal [expand, xlarge, large, medium, small]">
-      <h2>Awesome. I have it.</h2>
-      <p class="lead">Your couch.  It is mine.</p>
-      <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
-      <a class="close-reveal-modal">&#215;</a>
-    </div>
-    <!-- Included JS Files (Uncompressed) -->
     <script src="{% static 'javascripts/jquery.js' %}"></script>
     <script data-main="{% static 'javascripts/main.js' %}"
         src="{% static 'javascripts/require.js' %}"></script>
+    {% providers_media_js %}
 
 </body>
 </html>
