--- a/skifflog/templates/base.html
+++ b/skifflog/templates/base.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load socialaccount %}
 {% load account %}
+{% load require %}
 <!--[if IE 8]> <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 
@@ -52,8 +53,7 @@
       </div>
     </div>
     <script src="{% static 'javascripts/jquery.js' %}"></script>
-    <script data-main="{% static 'javascripts/main.js' %}"
-        src="{% static 'javascripts/require.js' %}"></script>
+    {% require_module 'main' %}
     {% providers_media_js %}
 
 </body>
