slowly starting to make some functions

--- a/skifflog/templates/base.html
+++ b/skifflog/templates/base.html
@@ -12,7 +12,7 @@
     <!-- Set the viewport width to device width for mobile -->
     <meta name="viewport" content="width=device-width" />
 
-    <title>Welcome to Foundation</title>
+    <title>{% block title %}skifflog{% endblock %}</title>
 
     <!-- Included CSS Files -->
     <link rel="stylesheet" href="{% static 'stylesheets/app.css' %}">
