--- a/skifflog/templates/dashboard.html
+++ b/skifflog/templates/dashboard.html
@@ -52,6 +52,7 @@
             <h2>Settings</h2>
             <div class="panel four columns">
             <form method="post">
+                {% csrf_token %}
                 {{ profile_form.as_p }}
                 <input type="submit" class="button save" value="Save"/>
             </form>
